--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 mag-chibi.jpg
 nova-chibi.png
 node-v18.12.1-x64.msi
-problemapullrequest_update_x64.msi
+problemapullrequest.png
+wsl_update_x64.msi
 
